--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -8,6 +8,11 @@ $yellow:#FEC171;
 $panGreen: #30B08F;
 
 //sidebar
-$menuBg:#304156;
-$subMenuBg:#1f2d3d;
-$menuHover:#001528;
+$menuBg:#545c64;
+$menuHover:#434a50;
+
+$subMenuBg:#4c4e50;
+$subMenuHover:#3b3d3e;
+
+
+$sideBarWidth: 200px;
