--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,3 +3,15 @@
 @import './element.scss';
 @import './sidebar.scss';
 // @import './btn.scss';
+
+html {
+  height: 100%;
+  box-sizing: border-box;
+}
+body{
+  height: 100%;
+  margin: 0;
+}
+#app{
+  height: 100%;
+}
