--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -9,10 +9,11 @@ $panGreen: #30B08F;
 
 //sidebar
 $menuBg:#545c64;
+// $menuBg:#4d7979;
 $menuHover:#434a50;
 
 $subMenuBg:#4c4e50;
 $subMenuHover:#3b3d3e;
 
 
-$sideBarWidth: 200px;
+$sideBarWidth: 160px;
